test/error/error6.pas
{找不到标识符}
program prog;
var
x, y : integer;
begin
  x := a > b;
end.